<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_banner">Déi offiziell LGE Android App</string>
    <string name="action_about">Iwwer</string>
    <string name="app_autor" translatable="false">Colin Ries, 3B</string>
    <string name="app_name" translatable="false">LGE</string>
    <string name="base_intranet_url" translatable="false">http://lge.lumi-dos.com/app/intranet.html?slide=</string>
    <string name="base_calendar_url" translatable="false">http://lge.lumi-dos.com/app/calendar.html</string>
    <string name="choose_email_client">Wiel deng Email App:</string>
    <string name="closeDrawer" translatable="false">Close</string>
    <string name="contact">Kontakt</string>
    <string name="credits_copyright" translatable="false">\u00A92015 Colin Ries</string>
    <string name="developer_label">Entw\u00Ebckler</string>
    <string name="email_secretary" translatable="false">secretariat@lge.lu</string>
    <string name="feedback_address" translatable="false">colin.ries.apps@gmail.com</string>
    <string name="feedback_message">Hei ass mein Feedback zur LGE App:</string>
    <string name="feedback_subject">Feedback</string>
    <string name="header" translatable="false">LGE</string>
    <string name="intranet">Bildschirm</string>
    <string name="lge_full_name" translatable="false">Lycée de Gar\u00E7ons Esch</string>
    <string name="news">Kalenner</string>
    <string name="official_website" translatable="false">LGE.LU</string>
    <string name="openDrawer" translatable="false">Open</string>
    <string name="phone_number" translatable="false">+352 55 62 85</string>
    <string name="placeholder_loading" translatable="false">loading…</string>
    <string name="select_class">Wiel eng Klass</string>
    <string name="send_feedback">Feedback</string>
    <string name="slide_back" translatable="false">\u2190</string>
    <string name="slide_forward" translatable="false">\u2192</string>
    <string name="street_number" translatable="false">71, rue du Fossé</string>
    <string name="subheader">Déi offiziell App</string>
    <string name="timetables">Stonnepläng</string>
    <string name="timetable_address_prefix" translatable="false">http://lge.lu/horaires/39/c/c000</string>
    <string name="timetable_address_suffix" translatable="false">.htm</string>
    <string name="title_activity_about">Iwwer</string>
    <string name="welcome">W\u00EBllkommen</string>
    <string name="zip_code_location" translatable="false">L-4123 Esch-sur-Alzette</string>
    <string name="sender_id" translatable="false">953167740477</string>
    <string name="generalTopic">/topics/general</string>
    <string name="device_registered">Device registered!</string>
    <string name="registration_error">Error registering device!</string>
    <string name="subscribeToGeneralTopic">Allgemeng Neiegkeeten</string>
    <string name="getNotificationsFor">Push Benooriichtegungen</string>
    <string name="restartAppToApply">Start d\'App nei fier unzewenden!</string>
    <string name="restart">Neistarten</string>

    <string-array name="nav_drawer_titles">
        <item>W\u00EBllkommen</item>
        <item>Bildschirm</item>
        <item>Stonnepläng</item>
        <item>Kalenner</item>
        <item>Kontakt</item>
        <item>Astellungen</item>
        <item>Iwwer</item>
        <item>LGE.lu</item>
        <item>Feedback</item>
    </string-array>

    <string-array name="nav_drawer_titles_dev">
        <item>W\u00EBllkommen</item>
        <item>Bildschirm</item>
        <item>Stonnepläng</item>
        <item>Kalenner</item>
        <item>Kontakt</item>
        <item>Astellungen</item>
        <item>Iwwer</item>
        <item>LGE.lu</item>
        <item>Feedback</item>
        <item>Entwëckler</item>
    </string-array>

    <string name="title_activity_settings">Astellungen</string>
    <string name="action_settings">Astellungen</string>
    <string name="whatsnew_content">-Design Verbesserungen bei "Iwwer", "Kontakt" an an den Astellungen\n
        -Stell deng Klass an fier dass den Stonneplang dann automatesch gelueden get!\n
        -Vakanzen Countdown fier dass de emer aktuell bleiws, wéi laang et nach ass!</string>
    <string name="whatsnew">Waat ass nei?</string>
    <string name="checkitout">Weis mer et!</string>
    <string name="gotit">Ok!</string>
    <string name="notnow">Net elo!</string>
    <string name="title_activity_developer">Entwëckler</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="serverBootReportTopicText">Server Start Beriicht</string>
    <string name="serverbootreporttopic" translatable="false">/topics/serverbootreport</string>
    <string name="holidayCountdownTopicText" translatable="false">Holiday Countdown (Test)</string>
    <string name="holidaycountdowntopic_dev" translatable="false">/topics/holidayCountdownDev</string>
    <string name="version">Versioun</string>
    <string name="build" translatable="false">Build</string>
    <string name="date">Datum</string>
    <string name="development_assistance">Entwëcklungs Assistenz</string>
    <string name="development_assistance_name" translatable="false">Oliver Nick, 2B LGL</string>
    <string name="design_assistance">Design Assistenz</string>
    <string name="design_assistance_name" translatable="false">Souheib Allouache</string>
    <string name="copyright" translatable="false">Copyright</string>
    <string name="phone_number_text">Telefon</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="feedback_address_text">Feedback Email</string>
    <string name="title_activity_settings_activity_wrapper">Astellungen</string>
    <string name="title_activity_settings_wrapper">Astellungen</string>
    <string name="general_notifications">Allgemeng Benooriichtegungen</string>
    <string name="general_notifications_summary">Push Benooriichtegungen fier News an allgemeng Informatiounen</string>
    <string name="holiday_countdown">Vakanzen Countdown</string>
    <string name="holiday_countdown_summary">Wann aktivéiert kriss de all Dag moies um 7:30 eng Benooriichtegung, déi der seet wéivill Deeg et nach sinn</string>
    <string name="my_class">Meng Klass</string>
    <string name="apply">Uwenden</string>
    <string name="holidaycountdowntopic">/topics/holidayCountdown</string>

</resources>
