<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ContactActivity"
    android:id="@+id/DrawerLayout"
    android:elevation="7sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>

    <TextView
        android:text="@string/lge_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/std_text_size"
        android:textColor="@color/ColorPrimary"
        android:id="@+id/lge_full_name"
        android:layout_below="@id/tool_bar"
        android:layout_margin="@dimen/std_text_margin"/>

    <TextView
        android:text="@string/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/std_text_size"
        android:textColor="@color/ColorPrimary"
        android:id="@+id/phone_number"
        android:layout_below="@id/lge_full_name"
        android:layout_margin="@dimen/std_text_margin"/>

    <TextView
        android:text="@string/email_secretary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/std_text_size"
        android:textColor="@color/ColorPrimary"
        android:id="@+id/email_secretary"
        android:layout_below="@id/phone_number"
        android:layout_margin="@dimen/std_text_margin"/>

    <TextView
        android:text="@string/street_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/std_text_size"
        android:textColor="@color/ColorPrimary"
        android:id="@+id/street_number"
        android:layout_below="@+id/email_secretary"
        android:layout_marginLeft="@dimen/std_text_margin"
        android:layout_marginTop="@dimen/std_text_margin"/>

    <TextView
        android:text="@string/zip_code_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/std_text_size"
        android:textColor="@color/ColorPrimary"
        android:id="@+id/version_build"
        android:layout_below="@id/street_number"
        android:layout_marginLeft="@dimen/std_text_margin"
        android:layout_marginTop="0dp"/>

    <TextView
        android:text="@string/feedback_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/std_text_size"
        android:textColor="@color/ColorPrimary"
        android:id="@+id/developer_contact"
        android:layout_margin="@dimen/std_text_margin"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:text="@string/app_autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/std_text_size"
        android:textColor="@color/ColorPrimary"
        android:id="@+id/developer_name"
        android:layout_margin="@dimen/std_text_margin"
        android:layout_above="@id/developer_contact"/>

    <TextView
        android:text="@string/developer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/std_text_size"
        android:textColor="@color/ColorPrimary"
        android:id="@+id/developer_label"
        android:layout_margin="@dimen/std_text_margin"
        android:layout_above="@id/developer_name"/>

</RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="320dp"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>

</android.support.v4.widget.DrawerLayout>

