<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logoContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header"
                android:textSize="179sp"
                android:textColor="@color/deepblue"
                android:id="@+id/header"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subheader"
                android:textSize="46sp"
                android:textColor="@color/deepblue"
                android:layout_below="@id/header"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoContainer"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:id="@+id/first_row">

        <Button
            android:layout_width="@dimen/std_button_width"
            android:layout_height="wrap_content"
            android:text="@string/intranet"
            android:textColor="@color/white"
            android:background="@color/deepblue"
            android:textSize="@dimen/std_text_size"
            android:layout_alignParentLeft="true"
            android:onClick="startIntranet"/>
        <Button
            android:layout_width="@dimen/std_button_width"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@color/white"
            android:background="@color/deepblue"
            android:textSize="@dimen/std_text_size"
            android:layout_alignParentRight="true"
            android:onClick="startNews"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/second_row"
            android:layout_below="@id/first_row"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="@dimen/std_button_width"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textColor="@color/white"
                android:background="@color/deepblue"
                android:textSize="@dimen/std_text_size"
                android:layout_alignParentLeft="true"
                android:onClick="startContact"/>
            <Button
                android:layout_width="@dimen/std_button_width"
                android:layout_height="wrap_content"
                android:text="@string/official_website"
                android:textColor="@color/white"
                android:background="@color/deepblue"
                android:textSize="@dimen/std_text_size"
                android:layout_alignParentRight="true"
                android:onClick="startWebsite"/>

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>

