<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:id="@+id/DrawerLayout"
    android:elevation="7sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/getNotificationsFor"
            android:layout_below="@+id/tool_bar"
            android:id="@+id/notification_header"
            android:paddingLeft="12dp"
            android:paddingTop="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/subscribeToGeneralTopic"
            android:layout_below="@+id/notification_header"
            android:paddingLeft="12dp"
            android:paddingTop="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/subscibeToGeneralTopicText"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/subscibeToGeneralTopic"
            android:layout_below="@+id/notification_header"
            android:enabled="true"
            android:onClick="onCheckBoxClicked"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/restartAppToApply"
            android:layout_below="@+id/subscibeToGeneralTopicText"
            android:id="@+id/information_footer"
            android:paddingLeft="12dp"
            android:paddingTop="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="@dimen/geek_info_space_margin"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/information_footer"
            android:id="@+id/restartButton"
            android:text="@string/restart"
            android:onClick="restart"/>


    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="320dp"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>

</android.support.v4.widget.DrawerLayout>

